fix(core-paragraph): prevent overflow on ie11

--- a/packages/Paragraph/Paragraph.modules.scss
+++ b/packages/Paragraph/Paragraph.modules.scss
@@ -1,3 +1,7 @@
+.base {
+  width: 100%;
+}
+
 .leftAlign {
   text-align: left;
 }
